fix(popover): fixed overflow scrolling for the popover on small screens

--- a/styles/mixins/popover.mixins.css
+++ b/styles/mixins/popover.mixins.css
@@ -40,6 +40,7 @@
   background-image: url(/img/hectagons.svg);
   background-repeat: repeat-x;
   background-size: cover;
+  overflow-y: scroll;
 
   @media (min-width: $media-screen-small) {
     flex: 1 95%;
